# VietStructFEM

./: .coverage  .gitignore  CODE_OF_CONDUCT.md  COMMIT_MESSAGE.md  CONTRIBUTING.md  CONTRIBUTORS.md  GITHUB_SETUP.md  HUONG_DAN_SU_DUNG.md  Không được xác nhận 262586.crdownload  LICENSE  README.md  RELEASE_CHECKLIST.md  RELEASE_NOTES.md  ROADMAP.md  build_exe.py  pyproject.toml  quick_test.py  requirements.txt  test_imports.py  test_output.txt  test_smoke.py
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  python-app.yml
docs/: user_guide_en.md  user_guide_vi.md
examples/: basic_floor_system.py  demo_anastruct.py  demo_calculation.html  demo_concrete.py  demo_ezdxf.py  demo_handcalcs.py  output_layout.dxf
steeldeckfem/: __init__.py  __main__.py
steeldeckfem/core/: __init__.py  cantilever_designer.py  complete_floor_system.py  connection_designer.py  data_models.py  deflection_utility.py  engineering.py  fem_analyzer.py  floor_deck.py  foundation_designer.py  frame_dxf_exporter.py  frame_report_generator.py  helpers.py  load_combination_engine.py  plotly_charts.py  rc_beam_designer.py  rc_report_generator.py  rc_slab_designer.py  shear_wall_designer.py  stability.py  staircase_designer.py  steel_deck_report_generator.py  steel_designer.py  strip_footing_designer.py  vn_standards_loader.py  wind_zones.py
steeldeckfem/ui/: __init__.py  about_dialog.py  add_task_dialog.py  config_betong_lot.py  config_dao_mong.py  dinhmuc_search_dialog.py  import_settings_dialog.py  main_window.py  member_dialog.py  portal_frame_dialog.py  project_dialog.py  purlin_calculator_dialog.py  quick_start_dialog.py  section_beam_dialog.py  section_mong_bang_dialog.py  section_rc_wall_dialog.py  section_slab_dialog.py  session_dialog.py  steel_deck_calculator_dialog.py  sync_dialog.py  task_op_chan_tuong_dialog.py  wind_load_dialog.py
steeldeckfem/ui/modules/: connection_module.py  deflection_module.py  foundation_module.py  frame_analysis_module.py  opensees_module.py  rc_beam_module.py  rc_column_module.py  steel_deck_module.py  steel_module.py  utility_modules.py  warehouse_module.py
steeldeckfem/ui/widgets/: load_combo_wizard.py
tests/: README.md  conftest.py  test_fem_analyzer.py  test_wind_zones.py
