[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "steeldeckfem"
version = "0.1.0"
description = "VietStruct FEM - Open Source Structural Analysis Software for Vietnamese Engineers"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [
    {name = "VietStruct FEM Contributors"}
]
keywords = [
    "structural-engineering", 
    "fem", 
    "steel-design", 
    "vietnam",
    "tcvn",
    "civil-engineering",
    "building-design"
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "Intended Audience :: Developers",
    "Topic :: Scientific/Engineering",
    "Topic :: Scientific/Engineering :: Physics",
    "License :: OSI Approved :: MIT License",
    "Programming Language:: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Operating System :: OS Independent",
]

dependencies = [
    "PyNiteFEA>=2.0.2",
    "plotly>=6.5.0",
    "numpy>=2.4.0",
    "scipy>=1.16.0",
    "matplotlib>=3.10.0",
    "PyQt5>=5.15.11",
    "PyQtWebEngine>=5.15.7",
    "prettytable>=3.17.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-cov>=4.1.0",
    "pytest-mock>=3.12.0",
    "black>=24.0.0",
    "flake8>=7.0.0",
    "mypy>=1.8.0",
]
docs = [
    "mkdocs>=1.5.0",
    "mkdocs-material>=9.5.0",
    "mkdocstrings[python]>=0.24.0",
]

[project.urls]
Homepage = "https://github.com/YOUR_USERNAME/VietStructFEM"
Documentation = "https://github.com/YOUR_USERNAME/VietStructFEM/tree/main/docs"
Repository = "https://github.com/YOUR_USERNAME/VietStructFEM"
"Bug Tracker" = "https://github.com/YOUR_USERNAME/VietStructFEM/issues"

[project.scripts]
steeldeckfem = "steeldeckfem.__main__:main"

[tool.setuptools]
packages = ["steeldeckfem", "steeldeckfem.core", "steeldeckfem.ui"]

[tool.setuptools.package-data]
steeldeckfem = ["*.txt", "*.md"]

[tool.pytest.ini_options]
minversion = "8.0"
addopts = "-ra -q --cov=steeldeckfem --cov-report=html --cov-report=term-missing"
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]

[tool.black]
line-length = 100
target-version = ['py310', 'py311', 'py312']
include = '\\.pyi?$'
extend-exclude = '''
/(
    \\.eggs
  | \\.git
  | \\.hg
  | \\.mypy_cache
  | \\.tox
  | \\.venv
  | _build
  | buck-out
  | build
  | dist
)/
'''

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
ignore_missing_imports = true

[tool.coverage.run]
source = ["steeldeckfem"]
omit = ["*/tests/*", "*/__pycache__/*"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
    "class .*\\bProtocol\\):",
    "@(abc\\.)?abstractmethod",
]
